--- a/Runtime/Kogane.ReferenceCounter.asmdef
+++ b/Runtime/Kogane.ReferenceCounter.asmdef
@@ -1,8 +1,7 @@
 {
-    "name": "UniReferenceCounter",
-    "references": [
-        "GUID:f176cbee2c3f52d4fbcc2b9d2680673f"
-    ],
+    "name": "Kogane.ReferenceCounter",
+    "rootNamespace": "",
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
